--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body{
 /*-------------Carrusel--------------------*/
 .carrusel-container{
     position: relative;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid rgb(211, 182, 17);
 }
 .texto-carrusel{
     position: absolute;
@@ -132,8 +132,8 @@ body{
 .contenedor_seccion_productos{
     
     background: #30E8BF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, rgba(255, 130, 53, 0.603), rgba(48, 232, 192, 0.603)),url("../images/patagonia.svg");  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, rgba(255, 130, 53, 0.603), rgba(48, 232, 192, 0.603)),url("../images/patagonia.jpg"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, rgba(7, 7, 7, 0.5), rgba(10, 10, 10, 0.5)),url("../images/patagonia.svg");  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(10, 10, 10, 0.5), rgba(12, 12, 12, 0.5)),url("../images/patagonia.jpg"); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background-attachment: fixed;
      background-position: bottom;
     background-size: cover;
@@ -166,7 +166,7 @@ body{
     border-radius: 20px;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 0 40px goldenrod;
+    box-shadow: 0 0 20px rgb(255, 255, 255);
     transition: all .3s ease-in-out;
 }
 .carta-promocion:hover{
