--- a/css/style-faqs.css
+++ b/css/style-faqs.css
@@ -1,4 +1,5 @@
-body{
+.contenedor-faq{
+    height: 100vh;
     background-image: url(../images/fondo.jpg);
     background-attachment: fixed;
   background-position: center;
@@ -68,51 +69,32 @@ body{
     color: black;
 }
 
+
+
 .contenedor_col_nav{
     padding: 0;
 
     
 }
-.contenedor-links{
-    display: flex;
-    
-    width: 50%;
-}
-.items-barra{
-    flex: 1;
-    border: none;
-   border-left: 1px solid white;
-}
-.items-barra:last-child{
-    border: none;
-    border-left:1px solid white;
-    border-right: 1px solid white;
-}
-.boton-ingreso{
-    background-color: #2C3E50;
-    width: initial;
-   /* margin: initial !important;*/
-}
-@media (min-width: 992px){
 
-    .page{
-        background-color: rgb(167, 5, 5);
-    }
-    .fab{
-        border-radius: 50%;
-    }
-
-    .div-barralinks{
-        display: flex;
-        justify-content: space-between;
-        margin-left: 10%;
-
+.contenedor-mapa{
+    position: relative;
+    padding-bottom: 56.25%;
+    height: auto;
+    overflow: hidden;
 }
-.contenedor-contacto{
+.contenedor-mapa iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*.contenedor-contacto{
     display: flex;
     justify-content: space-between;
 
-}
+}*/
 
 /* Preguntas */
 
@@ -160,4 +142,37 @@ font-size: 15px;
 
 a:hover{
     text-decoration: none;
+}
+
+@media (min-width: 992px){
+
+    /*---------------Barra de Navegacion -------------------*/
+
+.div-barralinks{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10%;
+}
+.contenedor-links{
+    display: flex;
+    
+    width: 50%;
+}
+.items-barra{
+    flex: 1;
+    border: none;
+   border-left: 1px solid white;
+}
+.items-barra:last-child{
+    border: none;
+    border-left:1px solid white;
+    border-right: 1px solid white;
+}
+.boton-ingreso{
+    background-color: #2C3E50;
+    width: initial;
+   /* margin: initial !important;*/
+}
+
+
 }
