--- a/css/styleDetalleProductos.css
+++ b/css/styleDetalleProductos.css
@@ -86,6 +86,7 @@ font-family: 'Roboto', sans-serif;
  }
 
  .contenedor-detalle {
+     
      width: 80%;
      background-color: white;
      margin-left: 12%;
@@ -135,7 +136,7 @@ font-family: 'Roboto', sans-serif;
 .detalle-info .costos {
     text-align: right;
     width: 100%;
-    border-bottom: 1px solid gray;
+    /*border-bottom: 1px solid gray;*/
 }
 
  /* -- Iconos pie Cards */
