--- a/css/style-faqs.css
+++ b/css/style-faqs.css
@@ -1,10 +1,11 @@
 .contenedor-faq{
-    min-height;: 100vh;
+    min-height: 100vh;
     background-image: url(../images/fondo.jpg);
     background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-bottom: 5%;
     
 }
 
