--- a/css/style-user.css
+++ b/css/style-user.css
@@ -6,12 +6,13 @@
 
 .contenedor_usuario{
     
-    min-height;: 100vh;
+    min-height: 100vh;
    background-image: url(../images/img-user/fondo1.JPG);  
-background-attachment: fixed;
+    background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  padding-bottom: 5%;
 }
 
 .contenedor_col_nav{
@@ -136,7 +137,7 @@ width: auto;
  
  .row{
      font-size: 15px;
-     font-family: font-family: 'Roboto', sans-serif;
+     font-family: 'Roboto', sans-serif;
      ;
  }
  h2{
